--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,6 +24,13 @@
 			"name": "StrongPassword",
 			"skipFiles": ["<node_internals>/**"],
 			"program": "${workspaceFolder}/StrongPassword/index.js"
+		},
+		{
+			"type": "node",
+			"request": "launch",
+			"name": "SuperReducedString",
+			"skipFiles": ["<node_internals>/**"],
+			"program": "${workspaceFolder}/SuperReducedString/index.js"
 		}
 	]
 }
